# x_one_tool

./: .env  .gitignore  README.md  alembic.ini  conf.json  config.py  db.sqlite3  init.txt  main.py  pyproject.toml  requirements.txt  script.md  script.toml  setting.py  vvv.py  xlogger.py
apps/base/: __init__.py  _base.py  _models.py  _repository.py  _utils.py
apps/common/: __init__.py  generic_extensions.py  memory_api_router.py  memory_controller.py  memory_crud.py  pagination.py  sqlalchemy.py  sqlalchemy_crud.py  tasks.py
apps/db/: __init__.py  database.py  db_session.py
apps/db_catlog/: __init__.py  customs.py  models.py  repositories.py  routers.py  schemas.py
apps/test/: __init__.py  models.py
src/: __init__.py  module.py
src/api/: __init__.py
src/app/: __init__.py  app_module.py  routers.py
src/common/: __init__.py
src/containers/: __init__.py  dk_catalog.py  dk_data.py  dk_data_source.py  dk_table.py
src/core/: __init__.py  container.py  crud_base.py  dependency.py  error.py  model.py  schema.py  util.py
src/db/: __init__.py  database.py  db.py  db_errors.py  db_session.py
src/dk_data/: __init__.py  dk_container.py  errors.py  models.py  repositories.py  services.py
src/errors/: __init__.py
src/models/: __init__.py  dk_catalog.py  dk_catalog_model.py  dk_data_source_model.py  dk_table.py
src/repositories/: __init__.py  dk_catalog.py  dk_catalog_repository.py  dk_data_source.py  dk_data_source_repository.py  dk_table.py  dk_table_repository.py
src/schemas/: __init__.py  catalogs.py  data_source_schema.py  data_sources.py  data_sources_type.py  (+4 more)
test/: __init__.py  thread_test.py
(+62 files in other folders)
