[tool.poetry]
name = "x-one-tool"
version = "1.0.3"
description = "个人工具"
authors = ["xiejch <1312923196@qq.com>"]
readme = "README.md"
packages = [{include = "x_one_tool"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.22"
fastapi = "^0.103.2"
aiosqlite = "^0.19.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
alembic = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
