[tool.poetry]
name = "x-one-tool"
version = "1.0.3"
description = "个人工具"
authors = ["xiejch <1312923196@qq.com>"]
readme = "README.md"
packages = [{include = "x_one_tool"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.22"
fastapi = "^0.103.2"
aiosqlite = "^0.19.0"
uvicorn = "^0.23.2"
sqlalchemy-database = "^0.1.1"
aiofiles = "^23.2.1"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
fastapi-pagination = "^0.12.13"
fastapi-profiler = "^1.2.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
